
2007-05-30  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* debian/changelog, debian/rules, Doxyfile, 
		configure.in, src/codecs.c, config.h.in, 
		doc/man/C/xvidcap.1.xml, 
		doc/man/de/xvidcap.1.xml, 
		doc/man/it/xvidcap.1.xml, 
		doc/xvidcap/C/xvidcap.xml, 
		doc/xvidcap/C/xvidcap.xml.pot, 
		doc/xvidcap/de/xvidcap.xml-de.po, 
		doc/xvidcap/de/xvidcap.xml, 
		doc/xvidcap/it/xvidcap.xml-it.po, 
		doc/xvidcap/it/xvidcap.xml, 
		po/en.po, po/ru.po, po/es.po, po/de.po, 
		po/it.po, po/zh_CN.po: version bump
		to 1.1.6
	* src/gnome-xvidcap.glade: regression fix to
		avoid that the main menu has both sf
		and mf radio menu items selected on
		startup
	* debian/control: adding libogg/dev and
		libtheora/dev to dependencies

2007-05-29  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* version bump

2007-05-29  lon  <lon83129@126.com>
	* po/zh_CN.po: updated l10n

2007-05-29  Alexander Kraev  <alexander.kraev@gmail.com>
	* po/ru.po: updated l10n

2007-05-22  Alexander Kraev  <alexander.kraev@gmail.com>
	* po/ru.po: updated l10n

2007-05-22  lon  <lon83129@126.com>
	* po/zh_CN.po: updated l10n

2007-05-22  Vincenzo Reale <smart2128@baslug.org>
	* doc/xvidcap/it/figures/prefs-general.png:
		updated for current version

2007-05-18  Vincenzo Reale <smart2128@baslug.org>
	* doc: man/it/xvidcap.1-it.po, 
		man/it/xvidcap.1.xml, man/it/xvidcap.1, 
		xvidcap/it/xvidcap.xml-it.po, 
		xvidcap/it/xvidcap.xml: updated
		Italian l10n for docs
	* po/it.po: updated l10n

2007-05-18  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome_ui.c: removing unneeded variable
	* src/gnome-xvidcap.glade: removing Alt-P hint
		for pausing while minimized to tray.
		It didn't work, and we'll revisit it
		when adding IPC for shortcut control.

2007-05-17  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* po: en.po, de.po: updated l10n
	* doc/man: C/xvidcap.1.xml, C/xvidcap.1.xml.pot, 
		de/xvidcap.1-de.po, it/xvidcap.1-it.po:
		updated l10n
	* doc/xvidcap: C/figures/prefs-general.png, 