@@ -10,7 +10,7 @@ Build-Depends: debhelper (>> 3.3.4), libgtk2.0-dev,
 
 Package: xvidcap
 Architecture: any
-Depends: ${shlibs:Depends}, scrollkeeper
+Depends: ${shlibs:Depends}, scrollkeeper, imagemagick
 Suggests: yelp
 Description: Screen video capture for X
  A screen capture enabling you to capture videos off your X-Window desktop
