@@ -21,7 +21,8 @@ configure-stamp: patch-stamp
 
 	CFLAGS="$(CFLAGS)" ./configure --prefix=/usr \
 	--mandir=\$${prefix}/share/man --host=$(DEB_HOST_GNU_TYPE) \
-	--build=$(DEB_BUILD_GNU_TYPE)
+	--build=$(DEB_BUILD_GNU_TYPE) \
+	--enable-libtheora
 
 	touch configure-stamp
 
@@ -76,13 +77,13 @@ binary-arch: build install
 	dh_installmenu
 	dh_installman
 	dh_installchangelogs ChangeLog
-	dh_link
+	dh_link usr/share/xvidcap/ppm2mpeg.sh usr/bin/ppm2mpeg.sh
 	dh_strip
 	dh_compress -Xxml
 	dh_fixperms -Xppm2mpeg
 	dh_installdeb
 	dh_shlibdeps
-	dh_gencontrol -- -v1.1.6
+	dh_gencontrol 
 	dh_md5sums
 	dh_builddeb
 
